bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_nojqm_css.css
/* ... */
/**********************************************
* Keyframes
**********************************************/
@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
/**********************************************
* Desktop Panel Hidden
**********************************************/
@media not screen and (max-width: 85em) {
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header {
    margin-left: 0;
    transform: translate3d(0, 0, 0);
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header h1 > span {
    padding-left: 16pt;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header h1 > span::before {
    margin-right: 14pt;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header h1 a::before,
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header h1 button::before {
    text-align: center;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header > .ui-btn-right button,
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header > .ui-btn-right a {
    border-left: 1px solid rgba(255, 255, 255, 0.55);
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header .ui-controlgroup-controls button,
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header .ui-controlgroup-controls a {
    background-color: #085078;
    width: 8em;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header .ui-controlgroup-controls button.ui-icon-warning,
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header .ui-controlgroup-controls a.ui-icon-warning {
    background-color: #FF6600;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header .ui-subheader {
    flex: 1 100%;
    text-align: center;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header ul > li {
    flex: 1;
    border-left: 1px solid rgba(0, 0, 0, 0.55);
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header ul > li:first-child {
    border-left: none;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header ul > li a {
    display: block;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header ul > li a {
    padding-top: 3pt;
    padding-bottom: 3pt;
    line-height: inherit;
    white-space: nowrap;
    overflow: hidden;
  }
  .desktop-panel-hidden div[data-gadget-scope="header"] .ui-header ul > li a::before {
    font-size: 1.2em;
    display: block;
  }
  .desktop-panel-hidden .gadget-content {
    padding-top: 7em;
  }
  .desktop-panel-hidden div[data-gadget-scope='panel'] {
    transform: translate3d(-186pt, 0, 0);
  }
  .desktop-panel-hidden div[data-gadget-scope='panel'].visible {
    transform: translate3d(0, 0, 0);
  }
}
/**********************************************
* Maximize
**********************************************/
div[data-gadget-scope='maximize'] button {
  padding: 6pt;
  border: 1px solid rgba(0, 0, 0, 0.14);
  border-radius: 0.325em;
  background-color: #FFFFFF;
}
div[data-gadget-scope='maximize'] button::before {
  margin-right: 6pt;
}
div[data-gadget-scope='maximize'] button:hover,
div[data-gadget-scope='maximize'] button:active {
  background-color: #e0e0e0;
}
.editor-maximize div[data-gadget-scope='editor'] {
  position: fixed;
  z-index: 1500;
  left: 0;
  top: 30pt;
  width: 100vw;
  height: calc(100vh -  30pt );
}
.editor-maximize div[data-gadget-scope='editor'] iframe {
  height: 100%;
}
/**********************************************
* Front page
**********************************************/
ul.ui-list-grid {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
}
ul.ui-list-grid > li {
  flex-shrink: 1;
  vertical-align: top;
  padding: 3pt;
  border: 1px solid rgba(0, 0, 0, 0.3);
  border-radius: 0.325em;
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);
  background-color: #FFFFFF;
}
@media not screen and (min-width: 45em) {
  ul.ui-list-grid > li {
    flex-basis: 100%;
    margin-bottom: 6pt;
  }
}
@media only screen and (min-width: 45em) and (max-width: 85em), not screen and (max-width: 85em) {
  ul.ui-list-grid > li {
    margin-right: 24pt;
    margin-bottom: 24pt;
    flex-basis: 20em;
  }
}
ul.ui-list-grid > li h2 {
  font-weight: 700;
  background: #085078;
  color: #FFFFFF;
  padding: 6pt;
}
ul.ui-list-grid > li li {
  padding: 3pt 6pt;
}
ul.ui-list-grid > li button {
  color: #2FA2E4;
  text-decoration: none;
}
ul.ui-list-grid > li button[href=""] {
  color: #1F1F1F;
}
ul.ui-list-grid > li button:hover {
  text-decoration: underline;
}
ul.ui-list-grid > li button:focus {
  outline-offset: -2px;
  outline: 2px solid #3388cc;
}
/**********************************************
* Developer mode actions
**********************************************/
.edit-form,
.edit-form-action,
.edit-field,
.translate-title,
.translate-description {
  margin-left: 3pt;
  color: hsl(0, 0%, 42%);
}
.translate-description {
  border: 1px solid rgba(0, 0, 0, 0.3);
}
/**********************************************
* Icons
**********************************************/
.ui-btn-icon-top::before,
.ui-btn-icon-left::before,
.ui-btn-icon-right::before,
.ui-icon::before,
.ui-btn-icon-notext::before {
  font-family: FontAwesome;
  display: inline-block;
  content: "";
}
.ui-icon-spinner {
  opacity: 1;
}
.ui-icon-spinner::before {
  content: "\f110";
  animation: spin 0.5s infinite linear;
}
/* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
   readers do not read off random characters that represent icons */
.ui-icon-glass::before {
  content: "\f000";
}
.ui-icon-music::before {
  content: "\f001";
}
.ui-icon-search::before {
  content: "\f002";
}
.ui-icon-envelope-o::before {
  content: "\f003";
}
.ui-icon-heart::before {
  content: "\f004";
}
.ui-icon-star::before {
  content: "\f005";
}
.ui-icon-star-o::before {
  content: "\f006";
}
/* ... */

